UI changes on home

--- a/app/src/main/res/layout/fr_home.xml
+++ b/app/src/main/res/layout/fr_home.xml
@@ -66,10 +66,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_home"
-            style="@style/RecyclerView"
+            style="@style/RecyclerView.VerticalPinkScrollBar"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginHorizontal="@dimen/dimen_20dp"
             android:layout_marginTop="@dimen/dimen_20dp"
             android:clipToPadding="false"
             android:paddingBottom="@dimen/dimen_20dp"
