--- a/app/src/main/res/layout/bank_account_section_layout.xml
+++ b/app/src/main/res/layout/bank_account_section_layout.xml
@@ -17,7 +17,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_bank_account"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/dimen_20dp">
 
         <ViewStub
             android:id="@+id/stub_link_bank_account_pending"
