--- a/app/src/main/res/layout/bank_short_details_section_layout.xml
+++ b/app/src/main/res/layout/bank_short_details_section_layout.xml
@@ -16,6 +16,7 @@
         android:id="@+id/cl_bank_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/dimen_20dp"
         android:layout_marginTop="@dimen/dimen_20dp"
         android:layout_marginBottom="@dimen/dimen_16dp">
 
