--- a/app/src/main/res/layout/item_bank_transaction.xml
+++ b/app/src/main/res/layout/item_bank_transaction.xml
@@ -16,6 +16,7 @@
         android:id="@+id/cv_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/dimen_20dp"
         android:layout_marginTop="@dimen/dimen_4dp"
         app:cardBackgroundColor="@color/colorWhiteF5"
         app:cardCornerRadius="@dimen/dimen_20dp"
